--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <div class="container">
     <h1>Estás Invitado</h1>
-    <h2>Anna & James</h2>
+    <h2>Mario & Erika</h2>
     <p class="section">Junto con sus familias<br>solicitan el honor de tu presencia<br>en su celebración de boda</p>
 
     <div class="section">
