--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -58,8 +57,7 @@
     </div>
 
     <div class="section">
-      <h3>Nuestra Historia</h3>
-      <p>De un hola en una cafetería a una vida juntos.<br>No podemos esperar para celebrar este día contigo.</p>
+      <!-- Nuestra Historia section removed -->
     </div>
 
     <div class="section">
@@ -75,7 +73,7 @@
     </div>
 
     <div class="section">
-      <p>¡Estamos muy emocionados de celebrar contigo!<br>Con amor, Anna & James</p>
+      <p>¡Estamos muy emocionados de celebrar contigo!<br>Con amor, Mario & Erika</p>
     </div>
   </div>
 
