--- a/index.html
+++ b/index.html
@@ -52,24 +52,26 @@
 
     <div class="section">
       <h3>Sábado, 11 de Octubre de 2025</h3>
-      <p>4:00 PM<br>Rose Garden Venue, Napa Valley, California</p>
+      <p>4:00 PM</p>
       <div id="countdown"></div>
     </div>
 
     <div class="section">
-      <!-- Nuestra Historia section removed -->
+      <h3>Ceremonia Religiosa</h3>
+      <p>Av. José López Portillo Pte. 570<br>Nueva Tijuana, 22435 Tijuana, B.C., México</p>
+      <iframe class="map" src="https://www.google.com/maps?q=Av.+Jos%C3%A9+L%C3%B3pez+Portillo+Pte.+570,+Nueva+Tijuana,+22435+Tijuana,+B.C.,+Mexico&output=embed" allowfullscreen loading="lazy"></iframe>
+    </div>
+
+    <div class="section">
+      <h3>Recepción</h3>
+      <p>Av. Olivos 464<br>Las Torres Parte Baja, Las Torres, Tijuana, Baja California 22470, México</p>
+      <iframe class="map" src="https://www.google.com/maps?q=Av.+Olivos+464,+Las+Torres+Parte+Baja,+Tijuana,+Baja+California+22470,+Mexico&output=embed" allowfullscreen loading="lazy"></iframe>
     </div>
 
     <div class="section">
       <h3>Confirma tu Asistencia</h3>
       <p>Por favor confirma antes del 15 de Agosto de 2025</p>
       <a href="#" class="button">Confirmar Asistencia</a>
-    </div>
-
-    <div class="section">
-      <h3>Ubicación</h3>
-      <p>Rose Garden Venue<br>123 Vineyard Lane, Napa Valley, CA</p>
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.265758787107!2d-122.2864464846811!3d38.29753867966427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8084a2c238af3a17%3A0x27947a6ec7158960!2sNapa%20Valley!5e0!3m2!1ses!2sus!4v1683745183072!5m2!1ses!2sus" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
     <div class="section">
